{
    "name": "PlayerController",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "399993ea-ddb4-4143-af96-25d3569ca9ea",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "e8cef3ea-abbf-42b6-828f-45f283a37cdf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "d68a4a01-2db4-4b78-9240-c4674299976b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "df40e4e3-affa-4ec9-8c41-2cc0c966b654",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ae2b302a-f42e-48de-8381-b51bffd3015d",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a5949c6-5a10-47da-8f0c-ffcc0b55ef04",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e0c69cc-1f7f-452a-b18d-277e8cadff8a",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}